# conways_game_of_life

./: Cargo.toml
src/: board.rs  main.rs
