[package]
name = "conways_game_of_life"
version = "0.1.0"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]

[dependencies]
piston_window = "0.70.0"
rand = "0.3"
time = "0.1"
image = "0.15"
log = "0.3"
env_logger = "0.3"

# Link time optimization is the only one that is not enabled by default, because
# it increases compile time A LOT. However, it usually creates better performing
# executables.
[profile.release]
# Perform LLVM link time optimizations.
# http://llvm.org/docs/LinkTimeOptimization.html
lto = true
